Thu Feb 13 11:06:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if pthread_setname_np is available.

	* thread_pthread.c: pthread_setname_np is not available on old
	  Darwins.  [ruby-core:60524] [Bug #9492]

Thu Feb 13 00:56:59 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: revert r44922. I should have used AC_CHECK_FUNCS()
	  to just define a symbol if the function is available.

Thu Feb 13 00:20:58 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: use AC_CHECK_FUNC instead of AC_CHECK_FUNCS
	  if available.

Thu Feb 13 00:15:10 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: fix to undefine HAVE_MEMMEM correctly if it is broken.

Tue Feb 11 23:54:40 2014  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_cmp): Specialize a comparison to zero.

	* ext/bigdecimal/bigdecimal.c (is_negative): Use rb_big_cmp instead of
	  RBIGNUM_NEGATIVE_P.
	  (BigMath_s_log): Ditto.

Tue Feb 11 22:59:10 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_bn.c (ossl_bn_initialize): Use rb_integer_pack.
	  Fix SEGV by OpenSSL::BN.new(1 << (2**34)).

Tue Feb 11 17:00:38 2014  Zachary Scott  <e@zzak.io>

	* ext/tk/README.tcltklib: [DOC] Fix typo by @xta [Fixes GH-532]

Sun Feb  9 13:59:29 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Fix compilation error.
	  https://bugs.ruby-lang.org/issues/8358#note-16

Sun Feb  9 05:20:24 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (rb_cv_gnu_qsort_r): use compile error "conflicting
	  types for 'qsort_r'" instead of AC_RUN_IFELSE.

Sun Feb  9 04:07:34 2014  Zachary Scott  <e@zzak.io>

	* lib/yaml.rb: [DOC] Add links to syck and psych on github [Bug #9501]
	  Based on a patch by Giorgos Tsiftsis

Sun Feb  9 02:13:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (OBJ_TAINTABLE, OBJ_TAINT, OBJ_INFECT),
	  marshal.c (r_entry0): all Numerics never be tainted now.
	  [ruby-core:57346] [Bug #8945]
